# Exoplanet_AI

./: KOI_data.csv  LICENSE  NasaExoplanetArchive.csv  README.md  index.html  k2pandc_dataset_exoplanet.csv  main.py  pyproject.toml  requirements.txt
models/: label_encoder.joblib  xgb_koi.joblib
models_macedo/: feature_list.joblib
src/: extract_data.py  train.py  visualize.py
src/RadVelocity/: train_lightgbm_macedo.py
web/: main.py
web/templates/: index.html  info.html  spectro.html
