[project]
name = "exoplanet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "scikit-learn",
    "xgboost",
    "pandas",
    "joblib",
    "numpy",
    "jinja2",
    "python-multipart",
    "pyarrow>=21.0.0",
    "fastparquet>=2024.11.0",
    "matplotlib>=3.10.6",
]
